-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.1.1
-
None
-
Ubuntu/Debian with ubuntu-sdk
Qt Creator 3.1.1
Based on Qt 5.2.1 (GCC 4.8.2, 64 bit)
Built on Aug 1 2014 at 17:31:01
I have a Rectangle inside a State.
I now know this is not possible and you must use PropertyChanges. However, this invalid code still caused the preview renders at the top of the Design view to display the Rectangle. I think it should not be displayed in the preview.
The Rectangle is not visible/clickable in the designer itself, and also isn't listed in the navigator.
On a side-note: maybe the Rectangle should be highlighted in the editor as invalid code? Or are there cases where this syntax IS valid?
import QtQuick 2.2 Rectangle { id: root width: 360 height: 360 states: [ State { name: "someState" Rectangle { id: someRectangle x: 200 y: 200 width: 100 height: 100 color: "#ff0000" opacity: 1 } } ] }
For Gerrit Dashboard: QTCREATORBUG-13003 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
163217,2 | QmlJSEditor: Do not allow child items for states | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |